exports[`test Post component should render the title as a link when the titleLink prop is true 1`] = `
<div>
  <h2
    className="title">
    <Link
      activeClassName=""
      activeOnlyWhenExact={false}
      activeStyle={Object {}}
      className="link"
      isActive={[Function]}
      replace={false}
      style={Object {}}
      to="/post/undefined" />
  </h2>
  <p
    className="content" />
</div>
`;

exports[`test Post component should render the title not as a link 1`] = `
<div>
  <h2
    className="title">
    My post
  </h2>
  <p
    className="content" />
</div>
`;
